# mdbtools-rs

./: .gitignore  Cargo.toml  README.md  file-format-notes.md
.github/workflows/: integration-tests.yml
src/: backend.rs  catalog.rs  column.rs  conversion.rs  data.rs  error.rs  lib.rs  map.rs  mdbfile.rs  money.rs  numeric.rs  rc4.rs  table.rs  time.rs  utils.rs  write.rs
testdata/: AssetItems.csv
tests/: test_sample_db.rs
